--- a/myStore_BackEnd/myStore_BackEnd.csproj
+++ b/myStore_BackEnd/myStore_BackEnd.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KategoriController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProdukController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1228,6 +1229,7 @@
     <Content Include="Views\Kategori\Index.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Produk\Edit.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
