--- a/myStore_BackEnd/myStore_BackEnd.csproj
+++ b/myStore_BackEnd/myStore_BackEnd.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\GlobalSessionAttribute.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\kategori.cs">
       <DependentUpon>myStoreModel.tt</DependentUpon>
